// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 fhvfGe"
>
  <div
    class="card__Container-s87lnr-1 bZwIKJ"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 cemTEL"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kzYlTl"
        >
          <p
            class="card__SubTitle-s87lnr-3 fzVDLq"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 gGFwz"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 bZwIKJ"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 cemTEL"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kzYlTl"
        >
          <p
            class="card__SubTitle-s87lnr-3 fzVDLq"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 gGFwz"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 fhvfGe"
>
  <div
    class="card__Container-s87lnr-1 bZwIKJ"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 cemTEL"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kzYlTl"
        >
          <p
            class="card__SubTitle-s87lnr-3 fzVDLq"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 gGFwz"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 bZwIKJ"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 cemTEL"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kzYlTl"
        >
          <p
            class="card__SubTitle-s87lnr-3 fzVDLq"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 gGFwz"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
